--- a/index.ipynb
+++ b/index.ipynb
@@ -807,9 +807,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [0.0, 2, 4.0],\n",
+       " 'y': [15.00000000000017, 23, 30.99999999999983],\n",
+       " 'mode': 'lines',\n",
+       " 'name': \"f' (x) = 3.9999999999999147\",\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tangent_line_four_x_plus_fifteen = derivative_trace(four_x_plus_fifteen, 2, line_length = 4, delta_x = .01)\n",
     "tangent_line_four_x_plus_fifteen"
@@ -824,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,9 +859,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "704488ce-cb1b-11e8-b44c-0242ac110033",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+         ],
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "f' (x) = 4.0",
+         "text": [],
+         "type": "scatter",
+         "uid": "70448d06-cb1b-11e8-b44c-0242ac110033",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          19,
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta f = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "7044a3d6-cb1b-11e8-b44c-0242ac110033",
+         "x": [
+          3,
+          3
+         ],
+         "y": [
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta x = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "7044a868-cb1b-11e8-b44c-0242ac110033",
+         "x": [
+          2,
+          3
+         ],
+         "y": [
+          23,
+          23
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"14dfcac6-d300-4cfa-aad1-ebd2b27aedd7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"14dfcac6-d300-4cfa-aad1-ebd2b27aedd7\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"70495ade-cb1b-11e8-b44c-0242ac110033\"}, {\"mode\": \"lines\", \"name\": \"f' (x) = 4.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [19.0, 23, 27.0], \"type\": \"scatter\", \"uid\": \"70495d22-cb1b-11e8-b44c-0242ac110033\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"70495ebc-cb1b-11e8-b44c-0242ac110033\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"70495ff2-cb1b-11e8-b44c-0242ac110033\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"14dfcac6-d300-4cfa-aad1-ebd2b27aedd7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"14dfcac6-d300-4cfa-aad1-ebd2b27aedd7\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"70495ade-cb1b-11e8-b44c-0242ac110033\"}, {\"mode\": \"lines\", \"name\": \"f' (x) = 4.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [19.0, 23, 27.0], \"type\": \"scatter\", \"uid\": \"70495d22-cb1b-11e8-b44c-0242ac110033\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"70495ebc-cb1b-11e8-b44c-0242ac110033\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"70495ff2-cb1b-11e8-b44c-0242ac110033\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "delta_x = 1\n",
     "\n",
